--- a/ERP开发计划/周工作计划2018年12月29日(徐小方）.md
+++ b/ERP开发计划/周工作计划2018年12月29日(徐小方）.md
@@ -18,5 +18,5 @@
 |Saas化|完成第三方对扫码APP接口的反馈问题处理|修订文档|1月4日|张开|完成|
 |Saas化|0.9.1新增功能bug修复及1.0.0版本bug修复，线上问题修复及解答|完成|1月4日|陈永，张萌|完成|
 |Saas化|视屏接口前端及视频服务三方联调|完整的流程走通|1月4日|胡夏鹏|完成|
-|Saas化|【邯郸】Project3.0.1升级到saas0.9.1(人、车、物、安全)数据表字段映射关系|完成|1月4日|徐小方，周勇|完成|
+|Saas化|【邯郸】Project3.0.1升级到saas0.9.1(人、车、物、安全)数据表字段映射关系|完成|1月4日|徐小方+周勇|完成|
 
