--- a/调度开发计划/周工作计划2018年1月4日（王权）.md
+++ b/调度开发计划/周工作计划2018年1月4日（王权）.md
@@ -17,8 +17,16 @@
 |--|--|--|--|--|
 |秦皇岛导数据|秦皇岛导数据方案确定并着手准备工作|完成|1月4日|王权|
 |Saas1.0.1|重要接口设计（进出站接口、进出场接口、GPS消息上传接口）|完成|1月4日|杨钒|
-|老V3/V4系统问题解决|将老V3/V4系统所提的问题在saas 1.0.1上进行比对并着手解决|根据计划进行|1月11日|王权|
-|Saas1.0.1|数据中心提供的进出场补偿接口对接|完成|1月4日|王明|
+|老V3/V4系统问题解决|将老V3/V4系统所提的问题在saas 1.0.1上进行比对并着手解决|根据计划进行|1月11日|王明|
+
+>## 上线值班计划
+|排序|人员|工作任务|
+|--|--|--|
+|1|储棚|1、解决模块升级问题<br>2、协助处理上线中的各种报错问题<br>3、开发的重要功能自测|
+|2|王权、陈永|1、解决模块升级问题<br>2、协助处理上线中的各种报错问题<br>3、开发的重要功能自测|
+|3|徐小方、杨钒|1、解决模块升级问题<br>2、协助处理上线中的各种报错问题<br>3、开发的重要功能自测|
+|4|胡夏鹏、张开|1、解决模块升级问题<br>2、协助处理上线中的各种报错问题<br>3、开发的重要功能自测|
+|5|王明、周勇|1、解决模块升级问题<br>2、协助处理上线中的各种报错问题<br>3、开发的重要功能自测|
 
 
 18年总结
