--- a/调度开发计划/周工作计划2019年1月11日（王权）..md
+++ b/调度开发计划/周工作计划2019年1月11日（王权）..md
@@ -22,7 +22,7 @@
 |项目|内容|目标|时间|责任人|
 |--|--|--|--|--|
 |邯郸项目|进出站中对车辆资源表的相关字段从redis读写<br>station_no、station_flag、now_direction|完成|1月13日|王权|
-|saas 1.0.1|为app部门提供调换计划的接口|完成|1月14日|王明|
+|saas 1.0.1|为app部门提供调换计划的接口|完成|1月14日|杨钒|
 |saas 1.0.1|jira中的bug修改并进行版本回归|完成|1月18日|王明+王权+储棚+杨钒|
 |saas 1.0.1|接口返回值不一致的更改|完成|1月18日|杨钒|
 |人事|工资档次与技术能力对应表|完成|1月18日|储棚|
