--- a/蓝泰源开发计划/周2019年4月15日-2019年4月19日计划/周工作计划2019年4月12日(徐小方.md
+++ b/蓝泰源开发计划/周2019年4月15日-2019年4月19日计划/周工作计划2019年4月12日(徐小方.md
@@ -8,17 +8,17 @@
 |--|--|--|--|--|
 |周一|考勤组管理建模<br/>考勤组视图|完成|徐小方|完成|
 |周二|考勤组设置|完成|徐小方|完成|
-|周三|考勤打卡接口文档及开发计划完成50%|完成|徐小方|完成|
-|周四|考勤打卡接口文档及开发计划完成100%|完成|徐小方|完成|
-|周五|车辆的概要设计完成50%（周四上午查看回滚原因，考勤打卡方案，线上问题查看及解决）|完成|徐小方|未完成|
+|周三|考勤打卡初版接口文档及初版开发计划完成50%|完成|徐小方|完成|
+|周四|考勤打卡初版接口文档及初版开发计划完成100%（上午查看回滚原因，考勤打卡方案，线上问题查看及解决）|完成|徐小方|未完成|
+|周五|车辆的概要设计完成50%（APP原型和appUI有差异，和erp后台考勤打卡需求也有差异，一直在对接）|完成|徐小方|未完成|
 
 ## 下周工作计划
 
 |时间|内容|目标|责任人|
 |--|--|--|--|
-|周一|车辆的概要设计完成40%|完成|徐小方|
-|周二|车辆的概要设计完成80%|完成|徐小方|
-|周三|整体saas概要设计整理合并|完成|徐小方|
-|周四|打卡规则接口50%（考勤打卡接口开发）|完成|徐小方|
-|周五|打卡规则接口100%（考勤打卡接口开发）|完成|徐小方|
+|周一|考勤打卡业务梳理分解，接口修订版完成50%|完成|徐小方|
+|周二|接口修订版完成100%，详细设计评审|完成|徐小方|
+|周三|车辆的概要设计完成40%|完成|徐小方|
+|周四|车辆的概要设计完成80%|完成|徐小方|
+|周五|整体saas概要设计整理合并|完成|徐小方|
 
